<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cd_cover"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/image_desc"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cd_cover" />

        <ImageView
            android:id="@+id/btn_play_stop"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/image_desc"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_ctl_playstop" />

        <TextView
            android:id="@+id/label_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_now_playing"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/now_playing_song_name"
            app:layout_constraintStart_toEndOf="@+id/cd_cover"
            app:layout_constraintTop_toTopOf="@+id/cd_cover"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/now_playing_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:maxLines="1"
            android:text="@string/song_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/now_playing_song_singer"
            app:layout_constraintEnd_toStartOf="@+id/btn_play_stop"
            app:layout_constraintStart_toEndOf="@+id/cd_cover"
            app:layout_constraintTop_toBottomOf="@+id/label_now_playing" />

        <TextView
            android:id="@+id/now_playing_song_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/song_singer"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/cd_cover"
            app:layout_constraintStart_toEndOf="@+id/cd_cover"
            app:layout_constraintTop_toBottomOf="@+id/now_playing_song_name" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_local_music"
            style="@style/MainActivityButtons"
            android:drawableTop="@drawable/ic_local_music"
            android:text="@string/btn_local_music"
            app:layout_constraintEnd_toStartOf="@+id/btn_collection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Button
            android:id="@+id/btn_collection"
            style="@style/MainActivityButtons"
            android:drawableTop="@drawable/ic_collection"
            android:text="@string/btn_collections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_local_music"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Button
            android:id="@+id/btn_current"
            style="@style/MainActivityButtons"
            android:drawableTop="@drawable/ic_current"
            android:text="@string/btn_current"
            app:layout_constraintEnd_toStartOf="@+id/btn_recognize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_local_music" />

        <Button
            android:id="@+id/btn_recognize"
            style="@style/MainActivityButtons"
            android:drawableTop="@drawable/ic_recognize"
            android:text="@string/btn_recognize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_current"
            app:layout_constraintTop_toBottomOf="@+id/btn_collection" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>

